FIX : min-width for super menu elements on small desktop screen < 1324px

--- a/skin/frontend/boilerplate/default/sass/_responsive.scss
+++ b/skin/frontend/boilerplate/default/sass/_responsive.scss
@@ -20,6 +20,7 @@
                 width: auto;
                 margin-bottom: 10px;
                 float: none;
+                min-width:initial;
                 &:first-child{
                     display: block;
                 }
